Source/WebCore: REGRESSION(r115654): PDFs come up blank https://bugs.webkit.org/show_bug.cgi?id=85275

Reviewed by Alexey Proskuryakov.

Test: http/tests/loading/pdf-commit-load-callbacks.html

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::finishedLoading): The load needs to be
    committed before we call finishedLoading on the
    FrameLoaderClient.
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::transitionToCommitted): We're guaranteeing
    that receivedFirstData() will be called other ways (namely,
    DocumentLoader won't finish without doing so). This call now
    causes custom representations to double-commit, which is bad.

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=85275.

Reviewed by Alexey Proskuryakov.

* http/tests/loading/pdf-commit-load-callbacks-expected.txt: Added.
* http/tests/loading/pdf-commit-load-callbacks.html: Added.
* platform/chromium/http/tests/loading: Added.
* platform/chromium/http/tests/loading/pdf-commit-load-callbacks-expected.txt: Added.
* platform/wk2/Skipped: New test requires layoutTestController.dumpResourceLoadCallbacks(),
    which isn't support for wk2 yet.


Canonical link: https://commits.webkit.org/102860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115774 268f45cc-cd09-0410-ab3c-d52691b4dbfc